--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Flowers Shop Ecommerce Website</title>
+        <title>Beginner Streaming Music</title>
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
         <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
         <link href="https://demos.creative-tim.com/soft-ui-design-system/assets/css/nucleo-icons.css" rel="stylesheet" />
@@ -61,8 +61,8 @@
                                 <div class="position-relative">
                                     <img class="max-width-500 w-100 position-relative z-index-2" src="https://demos.creative-tim.com/soft-ui-design-system/assets/img/illustrations/chat.png">
                                 </div>
-                                <h4 class="text-white font-weight-bolder">"Attention is the new currency"</h4>
-                                <p class="text-white">The more effortless the writing looks, the more effort the writer actually put into the process.</p>
+                                <h4 class="text-white font-weight-bolder">"Welcome to the BSM!!"</h4>
+                                <p class="text-white">We make more transparent nft and support more artists' diverse music.</p>
                             </div>
                         </div>
                     </div>
