--- a/views/main.ejs
+++ b/views/main.ejs
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Flowers Shop Ecommerce Website</title>
+    <title>Beginner Streaming Music</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
     <script src="https://kit.fontawesome.com/42d5adcbca.js" crossorigin="anonymous"></script>
     <link href="https://demos.creative-tim.com/soft-ui-design-system/assets/css/nucleo-icons.css" rel="stylesheet" />
@@ -225,8 +225,8 @@
             </div>
         </div>
     </section>
-    <!-- 사이트 간단 설명 / 검정 라인 -->
-    <section class="py-5 bg-gradient-dark">
+    <!-- 사이트 간단 설명 / 검정 라인 (삭제)-->
+    <!--<section class="py-5 bg-gradient-dark">
         <div class="container">
             <div class="row text-center">
                 <div class="col-lg-3 col-md-6">
@@ -255,7 +255,8 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> 
+    -->
 
     <!-- <section class="position-relative overflow-hidden py-5">
         <div class="row">
@@ -338,9 +339,9 @@
         </div>
     </section> -->
 
-    <!-- 기사 글 목록 / 3개 넘어가면 자동으로 내려가는 것 확인  -->
-    <section class="pb-3">
-        <!-- 글 목록 제목 -->
+    <!-- 기사 글 목록 / 3개 넘어가면 자동으로 내려가는 것 확인(삭제)  -->
+    <!--<section class="pb-3">
+         글 목록 제목 
         <div class="row">
             <div class="col-6 text-center mx-auto mt-5 mb-0">
                 <h2>Read our Articles</h2>
@@ -348,8 +349,8 @@
                 </p>
             </div>
         </div>
-    </section>
-    <!-- 게시글 목록 뒷 배경-->
+    </section> 
+     게시글 목록 뒷 배경 
     <section class="pb-6 bg-gray-100">
         <div class="container">
             <div class="row">
@@ -433,7 +434,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section>-->
     <!-- <section class="mt-6 py-5 bg-gradient-dark position-relative" style="background-image:url(https://images.unsplash.com/photo-1516528387618-afa90b13e000?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1770&amp;q=80); background-size: cover; background-position: center center;">
         <span class="mask bg-gradient-dark opacity-8"></span>
         <div class="container position-relative z-index-2">
