--- a/views/common/topNav.ejs
+++ b/views/common/topNav.ejs
@@ -4,16 +4,6 @@
         <a class="navbar-brand w-8" href="/" data-config-id="brand">
             <img src="../img/bsm_logo.png" width="80" onclick="gohome()">
         </a>
-
-        <!-- 뭐냐.. 토글인데 안보임-->
-        <!-- <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon mt-2">
-                <span class="navbar-toggler-bar bar1"></span>
-                <span class="navbar-toggler-bar bar2"></span>
-                <span class="navbar-toggler-bar bar3"></span>
-            </span>
-        </button> -->
-
         <!--페이지 이동 버튼 -->
         <div class="collapse navbar-collapse w-100 pt-3 pb-2 py-lg-0" id="navigation">
             <ul class="navbar-nav navbar-nav-hover ms-auto">
@@ -28,34 +18,31 @@
                     </a>
                 </li>
                 <li class="nav-item mx-2">
-                    <a href="javascript:void(0);" class="nav-link ps-2 cursor-pointer">
-                        Sell NFT
-                    </a>
-                </li>
-                <li class="nav-item mx-2">
                     <a href="/contact" class="nav-link ps-2 cursor-pointer">
-                        Contact Us
+                        Contact US
                     </a>
                 </li>
             </ul>
             <!-- 아이 콘 링크 -->
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item mx-2">
-                    <a href="javascript:void(0);" class="nav-link ps-2 cursor-pointer">
-                        <i class="fa fa-search" aria-hidden="true"></i>
-                    </a>
-                </li>
-                <li class="nav-item mx-2">
-                    <a href="/user/mypage" class="nav-link ps-2 cursor-pointer">
-                        <i class="fa fa-user-circle" aria-hidden="true"></i>
-                    </a>
-                </li>
-
-                <li class="nav-item ms-2">
-                    <a href="/user/signin" class="btn bg-gradient-dark mb-0">
-                        Sign in
-                    </a>
-                </li>
+                <% if(eoa != 'empty') { %>
+                    <li class="nav-item mx-2">
+                        <a href="/user/mypage" class="nav-link ps-2 cursor-pointer">
+                            <i class="fa fa-user-circle" aria-hidden="true"></i>
+                        </a>
+                    </li>
+                    <li class="nav-item ms-2">
+                        <a href="/user/signout" class="btn bg-gradient-dark mb-0">
+                            Sign Out
+                        </a>
+                    </li>
+                <% } else { %>
+                    <li class="nav-item ms-2">
+                        <a href="/user/signin" class="btn bg-gradient-dark mb-0">
+                            Sign in
+                        </a>
+                    </li>
+                <% } %>
             </ul>
         </div>
     </div>
