--- a/views/mintForm.ejs
+++ b/views/mintForm.ejs
@@ -10,6 +10,7 @@
         <link href="https://demos.creative-tim.com/soft-ui-design-system/assets/css/nucleo-svg.css" rel="stylesheet" />
         <link rel="stylesheet" href="../css/theme.css">
         <link rel="stylesheet" href="../css/loopple/loopple.css">
+        <link rel="icon" href="../img/favicon_bsm.png">
         <!-- 환경변수 관리 파일 -->
         <script src="../js/env.js"></script>
     </head>
